--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url('path-to-background-image.jpg') no-repeat center center fixed;
+    background: url('img/background.webp') no-repeat center center fixed;
     background-size: cover;
     color: #333;
 }
